# HateSpeechDetector

./: .gitignore  README.md  app.py  predict_model.py  project.md  pyproject.toml
data/: test.parquet  train.parquet
models/: logistic_regression_classifier.joblib
notebooks/: EDA.ipynb  Training.ipynb  profile_report.html
results/: predictions_over_test.csv
