[tool.poetry]
name = "carlos-morales-nlp-assignment"
version = "0.1.0"
description = ""
authors = ["Carlos Morales <camorales@outlook.com>"]
readme = "project.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
scikit-learn = "^1.4.2"
fastapi = "^0.110.3"
uvicorn = "^0.29.0"
clean-text = "^0.6.0"
unidecode = "^1.3.8"
sentence-transformers = "^2.7.0"
sweetviz = "^2.3.1"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.5.0"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
jupyter = "^1.0.0"
pandas = "^2.2.2"
fastparquet = "^2024.2.0"
nltk = "^3.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
